-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.2, 6.1.1, 6.2
-
None
-
87973325f1b99f2b25a5a0224e623803872ce2ef (qt/qtbase/dev) 43c0bf5e23f6cdf4080ca2847d703b8d8c2a4738 (qt/qtbase/6.2) f4375cb9c7c3a74f57df5cf36e54ad7ad98a102f (qt/tqtc-qtbase/5.15)
moc from qt 6.1.1 seems to fail parsing an include inside an enum:
usr/local/include/tbb/tbb_profiling.:29:1: error: Parse error at "/usr/local/include/tbb/internal/_tbb_strings.h"
more context can be seen here:
https://github.com/oneapi-src/oneTBB/blob/v2020.3/include/tbb/tbb_profiling.h#L29
seems it was fixed in 5.15 but somehow reappeared, at least in 6.1.1:
https://bugreports.qt.io/browse/QTBUG-80578
https://bugreports.qt.io/browse/QTBUG-80990
I checked the supposed fix did land in 6.1.1:
https://codereview.qt-project.org/c/qt/qtbase/+/301857
because the test is there:
https://github.com/qt/qtbase/blob/v6.1.1/tests/auto/tools/moc/enum_with_include.h
| For Gerrit Dashboard: QTBUG-94790 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 363551,1 | Handle even more include in enum cases | 6.1 | qt/qtbase | Status: NEW | +2 | 0 |